<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="3dp"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtStateName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="State Name"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:textSize="20dp"
            android:textAlignment="center"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cases"
                    android:padding="4dp"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txtCases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_of_cases"
                    android:padding="4dp"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/blue" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recovered"
                    android:padding="4dp"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txtRecovered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_of_recovered"
                    android:padding="4dp"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/green" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deaths"
                    android:padding="4dp"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txtDeaths"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_of_deaths"
                    android:padding="4dp"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/red" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>