<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/lgmvip"
                    android:textSize="40sp"
                    android:textColor="@color/black"
                    android:background="@color/green"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/txtWorldRecord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/world_wide"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:baselineAligned="false"
                    android:weightSum="3">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cases"
                            android:padding="4dp"
                            android:textSize="15sp"
                            android:textAlignment="center"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/txtWorldCases"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/no_of_cases"
                            android:padding="4dp"
                            android:textSize="12sp"
                            android:textAlignment="center"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/blue" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/recovered"
                            android:padding="4dp"
                            android:textSize="15sp"
                            android:textAlignment="center"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/txtWorldRecovered"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/no_of_recovered"
                            android:padding="4dp"
                            android:textSize="12sp"
                            android:textAlignment="center"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/green" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/deaths"
                            android:padding="4dp"
                            android:textSize="15sp"
                            android:textAlignment="center"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/txtWorldDeaths"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/no_of_deaths"
                            android:padding="4dp"
                            android:textSize="12sp"
                            android:textAlignment="center"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/red" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="3dp"
            app:cardElevation="3dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txtIndiaRecord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/indian_record"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:baselineAligned="false"
                    android:weightSum="3">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cases"
                            android:padding="4dp"
                            android:textSize="15sp"
                            android:textAlignment="center"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/txtIndiaCases"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/no_of_cases"
                            android:padding="4dp"
                            android:textSize="12sp"
                            android:textAlignment="center"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/blue" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/recovered"
                            android:padding="4dp"
                            android:textSize="15sp"
                            android:textAlignment="center"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/txtIndiaRecovered"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/no_of_recovered"
                            android:padding="4dp"
                            android:textSize="12sp"
                            android:textAlignment="center"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/green" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/deaths"
                            android:padding="4dp"
                            android:textSize="15sp"
                            android:textAlignment="center"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/txtIndiaDeaths"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/no_of_deaths"
                            android:padding="4dp"
                            android:textSize="12sp"
                            android:textAlignment="center"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/red" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerViewStates"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>